[package]
name = "neural_lib"
version = "0.1.0"
edition = "2021"
description = "Simple lib to declare multiple groups of neurons, classicals learning process are includes."
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.docs.rs]
repository = "https://https://github.com/FrCrypticCode/neural_lib"