[package]
name = "neural_lib"
version = "0.1.12"
edition = "2021"
description = "Simple lib to declare multiple groups of neurons, classicals learning process are includes."
license = "Apache-2.0"

authors = ["Cryptic <damien_501@hotmail.fr>"]

[dependencies]

[package.metadata.docs.rs]
repository = "https://https://github.com/FrCrypticCode/neural_lib"

[lib]
name = "neural_lib"
path = "src/lib.rs"